style: align copy code button fix: remove old copy code button

--- a/src/App.css
+++ b/src/App.css
@@ -138,17 +138,18 @@ a:focus {
   box-shadow: 0 0 0 1px #ccc;
 }
 
+/* copy codeblock to clipboard button */
 .code-pre {
+  padding-top: 0px;
   margin-bottom: 3em !important;
   position: relative;
 }
 
-/* copy codeblock to clipboard button */
 .code-copy-btn {
   color: white;
   position: absolute;
-  right: 15px;
-  top: 15px;
+  right: 10px;
+  top: 2%;
   font-size: 1.6em;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
